# research-radar

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  workflow.py
.bob/notes/: pending-notes.txt
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  styles.scss
mcp_server/: server.py  workflow_adapter.py
src/research_radar/: youtube_connector.py
src/research_radar/api/: __init__.py  server.py
src/research_radar/core/: paper_analyzer.py  paper_content_extractor.py  paper_metadata_extractor.py  paper_rag_processor.py  paper_relevance_checker.py  youtube_content_extractor.py  youtube_metadata_extractor.py
src/research_radar/core/embeddings/client/: factory.py  provider_type.py
src/research_radar/llm/client/: __init__.py  provider_type.py
src/research_radar/llm/prompts/: __init__.py  paper_analysis.yaml  paper_relevance_check.yaml  paper_summary.yaml
src/research_radar/ui/: __init__.py  app.py
src/research_radar/workflow/: graph.py  node_types.py  nodes.py  state.py
tests/: test_smoke.py
